Fix scroll bugs on mobile

--- a/src/app/home/activities/chat/chat.component.css
+++ b/src/app/home/activities/chat/chat.component.css
@@ -1,13 +1,12 @@
 .scroll-container {
     display: flex;
     flex-direction: column;
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
     flex: 1;
 }
 
 #list {
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
     display: flex;
     flex-direction: column-reverse;
     flex: 1;
